--- a/templates/notes.html
+++ b/templates/notes.html
@@ -7,10 +7,6 @@
 
 {%- block content %}
 <div>
-  {%- if section.title %}
-  <h1>{{ section.title }}</h1>
-  {%- endif %}
-
   {% set_global notes = [] %}
   {%- set root = get_section(path='_index.md') %}
   {%- for sect in root.subsections %}
@@ -19,11 +15,8 @@
     {% set_global notes = notes | concat(with=sub.pages) %}
     {%- endif %}
   {%- endfor %}
-  {%- for note in notes %}
-  <article><a href="{{ note.permalink }}">{{ note.title | safe }}</a>
-    <p>{{ note.date }}</p>
-    <div>{{ note.content | safe }}</div>
-  </article>
+  {%- for note in notes | sort(attribute="date") | reverse %}
+      {{- macros::note_display(note=note) }}
   {%- endfor %}
 
 </div>
