--- a/templates/page.html
+++ b/templates/page.html
@@ -10,16 +10,29 @@
 {%- endblock seo %}
 
 {%- block content %}
-  <article>
-  <h1>{{ page.title }}</h1>
-  {%- if not page.disable_meta %}
-  {{- macros::page_meta(page=page) }}
-  {%- endif %}
+<article class="mb-16">
+  <h1 class="text-3xl">{{ page.title }}</h1>
+  <hr class="h-1 mb-8 mt-1 rounded border-0 bg-gradient-vain" />
 
+  <div class="markdown-content">
   {{ page.content | safe }}
+  </div>
 
-  {%- block page_footer %}
-  {{- macros::page_footer(page=page) }}
-  {%- endblock page_footer %}
+  <span class="">
+  {%- if page.date %}
+    Published {{ page.date | date(format="%_d %b, %Y") }} 
+    {%- if page.updated %}, updated {{ page.updated | date(format="%_d %b, %Y") }}{% endif %}.
+  {% endif %}
+  </span>
+
   </article>
+
+  <!-- TODO: add breadcrumbs -->
+  <!-- TODO: add series display to bottom of page -->
+  <!-- TODO: add footnotes/references to bottom of page -->
+  <!-- TODO: add prev/next -->
+
 {%- endblock content %}
+{%- block page_footer %}
+{{- macros::page_footer(page=page) }}
+{%- endblock page_footer %}
