--- a/templates/partials/head_js.html
+++ b/templates/partials/head_js.html
@@ -3,7 +3,7 @@
 
 <script defer async src="{{ get_url(path='js/htmx.js', trailing_slash=false, cachebust=true) | safe }}"{%- if integrity %} integrity="sha384-{{ get_hash(path='js/htmx.js', sha_type=384, base64=true) | safe }}"{%- endif %}></script>
 {%- if config.extra.js_bundle %}
-<script defer src="{{ get_url(path='js/abridge_nopwa.min.js', trailing_slash=false, cachebust=true) | safe }}"{%- if integrity %} integrity="sha384-{{ get_hash(path='js/abridge_nopwa.min.js', sha_type=384, base64=true) | safe }}"{%- endif %}></script>
+<script defer src="{{ get_url(path='js/bundle.min.js', trailing_slash=false, cachebust=true) | safe }}"{%- if integrity %} integrity="sha384-{{ get_hash(path='js/abridge_nopwa.min.js', sha_type=384, base64=true) | safe }}"{%- endif %}></script>
 {%- endif %}
 
 <noscript><link rel="stylesheet" href="{{ get_url(path='nojs.css') | safe }}" /></noscript>
