--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,12 @@
   {{- macros_seo::seo(config=config, title=title, title_addition=title_addition, description=description, is_home=true) }}
 {%- endblock seo %}
 
+
+{%- block header %}
+  {{- macros::nav(config=config, title=config.title, extra_space=true
+  ) }}
+{%- endblock header %}
+
 {%- block content %}
 <div class="markdown-content">
   {{ section.content | safe }}
