--- a/templates/404.html
+++ b/templates/404.html
@@ -18,6 +18,6 @@
 {%- block content %}
     <div>
       <h1>404 :(</h1>
-      <p>This page isn't here, maybe it moved... return <a href="{{ config.base_url | safe }}/">home?</a></p>
+      <p>This page isn't here, maybe it moved... <a class="url" href="{{ config.base_url | safe }}/">return home?</a></p>
     </div>
 {%- endblock content %}
