--- a/templates/resume.html
+++ b/templates/resume.html
@@ -50,39 +50,7 @@
     <a href="{{ info.link }}">{{ info.text }}</a>
     {% endfor %}#}
 
-<div class="markdown-content">
-
-      <ul class="">
-         <li>You might feel like you are being really "organized" o</li>
-         <li>Nested navigation in UIs is a bad idea too, keep things as flat as possible.</li>
-         <li>Nesting tons of folders in your source code is also not helpful.</li>
-      </ul>
-<ol class="">
-   <li>
-      List item one
-      <ul class="">
-         <li>You might feel like you are being really "organized" o</li>
-         <li>Nested navigation in UIs is a bad idea too, keep things as flat as possible.</li>
-         <li>Nesting tons of folders in your source code is also not helpful.</li>
-      </ul>
-   </li>
-   <li>
-      List item two
-      <ul class="">
-         <li>I'm not sure if we'll bother styling more than two levels deep.</li>
-         <li>Two is already too much, three is guaranteed to be a bad idea.</li>
-         <li>If you nest four levels deep you belong in prison.</li>
-      </ul>
-   </li>
-   <li>
-      List item three
-      <ul class="">
-         <li>Again please don't nest lists if you want</li>
-         <li>Nobody wants to look at this.</li>
-         <li>I'm upset that we even have to bother styling this.</li>
-      </ul>
-   </li>
-</ol>
+<div class="markdown-content resume">
   {{ page.content | safe }}
 </div>
 
