--- a/styles/style.css
+++ b/styles/style.css
@@ -3,82 +3,131 @@
 @tailwind utilities;
 
 @layer base {
-  html, body {
+  html,
+  body {
     @apply bg-background-1;
     @apply text-text-1;
     @apply font-sans;
   }
-  .markdown-content h1 {
-    @apply text-4xl;
-  }
-  .markdown-content hr {
-    @apply bg-gradient-vain border-0 h-1 rounded my-1;
-  }
-  .markdown-content h2 { @apply text-3xl; }
-  .markdown-content h3 { @apply text-2xl; }
-  .markdown-content h4 { @apply text-xl; }
-  .markdown-content h5 { @apply text-xl; }
-  .markdown-content h6 { @apply text-xl; }
-  .markdown-content * { @apply text-lg; }
-  .markdown-content a { @apply url; }
-  .markdown-content p { @apply mb-4 /* font-serif */; }
-  .markdown-content ol { 
-    @apply list-decimal list-inside space-y-1 mb-4;
-  }
-  .markdown-content ul ol, .markdown-content ol ol, .markdown-content ul ul, .markdown-content ol ul {
-    @apply ps-4;
-  }
-  .markdown-content ul li::marker {
-    @apply text-gradient-vain;
-  }
-  .markdown-content ul {
-    @apply list-disc list-inside space-y-1 mb-4;
-    /* space-y-4 text-gray-500 list-decimal list-inside dark:text-gray-400 */
-  }
-  .markdown-content img {
-    /* Add style attribute to images:
+  .markdown-content {
+    hr {
+      @apply bg-gradient-vain border-0 h-1 rounded mt-1;
+    }
+    h1:not(:first-child) {
+      @apply mt-16;
+    }
+    h1 {
+      @apply text-4xl;
+    }
+    h2 {
+      @apply text-3xl mt-12;
+    }
+    h3 {
+      @apply text-2xl mt-4;
+    }
+    h4 {
+      @apply text-xl mt-4;
+    }
+    h5 {
+      @apply text-xl mt-4;
+    }
+    h6 {
+      @apply text-xl mt-4;
+    }
+    em,
+    strong {
+      font-size: inherit;
+    }
+    * {
+      @apply text-lg;
+    }
+    a {
+      @apply url;
+    }
+    p {
+      @apply my-4 /* font-serif */;
+    }
+    ol {
+      @apply list-decimal list-inside space-y-1 mt-4 mb-4;
+    }
+    ul {
+      @apply list-disc list-inside space-y-1 mt-4 mb-4;
+    }
+
+    ul ul,
+    ul ol,
+    ol ol,
+    ol ul {
+      @apply ps-4;
+    }
+
+    img {
+      /* Add style attribute to images:
      * background-image: url(img/img-lowres.jpg); */
-    font-style: italic;
-    background-size: cover;
-    background-repeat: no-repeat;
-    shape-margin: 1rem;
-    max-width: 100%;
-    height: auto;
-    vertical-align: middle;
+      font-style: italic;
+      background-size: cover;
+      background-repeat: no-repeat;
+      shape-margin: 1rem;
+      max-width: 100%;
+      height: auto;
+      vertical-align: middle;
+    }
   }
-    /* focus:outline-none focus:bg-background-2; */
+
+  /* @keyframes fade-in { from { opacity: 0; } } */
+  /* @keyframes fade-out { to { opacity: 0; } } */
+  /* @keyframes slide-up { */
+  /*   0% { transform:translateY(0); } */
+  /*   50% { transform:translateY(-100%); } */
+  /*   100% { transform:translateY(-100%); } */
+  /* } */
+  /* @keyframes bounce-down { */
+  /*   from, to { transform: scale(1, 1); } */
+  /*   0% { transform:translateY(-100%); } */
+  /*   40% { transform:translateY(-100%); } */
+  /*   60% { transform:translateY(5%); } */
+  /*   60% { transform: scale(1.010, 0.990); } */
+  /*   70% { transform:translateY(-5%); } */
+  /*   70% { transform: scale(0.990, 1.010); } */
+  /*   80% { transform:translateY(1%); } */
+  /*   80% { transform: scale(1.003, 0.997); } */
+  /*   90% { transform:translateY(-1%); } */
+  /*   90% { transform: scale(0.997, 1.003); } */
+  /*   100% { transform:translateY(0); } */
+  /* } */
+  /* ::view-transition-old(bounce) { */
+  /* animation: slide-up 700ms ease; */
+  /* } */
+  /* ::view-transition-new(bounce) { */
+  /* animation: bounce-down 700ms ease; */
+  /* } */
+  /* .bounce { */
+  /* view-transition-name: bounce; */
   /* } */
 
-    /* @keyframes fade-in { from { opacity: 0; } } */
-    /* @keyframes fade-out { to { opacity: 0; } } */
-    /* @keyframes slide-up { */
-    /*   0% { transform:translateY(0); } */
-    /*   50% { transform:translateY(-100%); } */
-    /*   100% { transform:translateY(-100%); } */
-    /* } */
-    /* @keyframes bounce-down { */
-    /*   from, to { transform: scale(1, 1); } */
-    /*   0% { transform:translateY(-100%); } */
-    /*   40% { transform:translateY(-100%); } */
-    /*   60% { transform:translateY(5%); } */
-    /*   60% { transform: scale(1.010, 0.990); } */
-    /*   70% { transform:translateY(-5%); } */
-    /*   70% { transform: scale(0.990, 1.010); } */
-    /*   80% { transform:translateY(1%); } */
-    /*   80% { transform: scale(1.003, 0.997); } */
-    /*   90% { transform:translateY(-1%); } */
-    /*   90% { transform: scale(0.997, 1.003); } */
-    /*   100% { transform:translateY(0); } */
-    /* } */
-    /* ::view-transition-old(bounce) { */
-    /* animation: slide-up 700ms ease; */
-    /* } */
-    /* ::view-transition-new(bounce) { */
-    /* animation: bounce-down 700ms ease; */
-    /* } */
-    /* .bounce { */
-    /* view-transition-name: bounce; */
-    /* } */
+  .resume {
+    ul > li > ul {
+      @apply flex flex-row list-none space-y-0 gap-y-4 gap-x-4 flex-wrap mt-2;
+      > li {
+        /* @apply border rounded-full py-0.5 px-4 border-[#75cec4] bg-[#225f58] text-[#75cec4]; */
+        /* @apply border rounded-full py-0.5 px-4 border-[#71add1] bg-[#204961] text-[#71add1]; */
+        @apply border rounded-full py-0.5 px-4 border-[#73bacd] bg-[#22515e] text-[#73bacd];
+      }
+    }
+
+    ol {
+      @apply list-none space-y-1 mt-4 mb-4;
+    }
+
+    ol > li > ol {
+      @apply flex flex-row list-none space-y-0 gap-y-4 gap-x-4 flex-wrap mt-4;
+      > li {
+        /* @apply text-xl border rounded-full py-2 px-4 border-[#75cec4] bg-[#225f58] text-[#75cec4]; */
+        @apply text-xl border rounded-xl py-2 px-4 border-[#71add1] bg-[#204961] text-[#71add1];
+        /* @apply text-xl border rounded-full py-2 px-4 border-[#73bacd] bg-[#22515e] text-[#73bacd]; */
+      }
+    }
+  }
 }
 
 @layer utilities {
