--- a/templates/resume.html
+++ b/templates/resume.html
@@ -50,7 +50,7 @@
     <a href="{{ info.link }}">{{ info.text }}</a>
     {% endfor %}#}
 
-<div class="markdown-content resume">
+<div class="markdown-content resume-content">
   {{ page.content | safe }}
 </div>
 
