--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -1,27 +1,3 @@
-{# Tailwind CSS #}
-{#<script src="https://cdn.tailwindcss.com"></script>#}
-
-{#- Theme Switcher Button to toggle between dark/light #}
-  {%- set integrity = config.extra.integrity -%}
-
-  {%- if config.extra.js_switcher %}
-  {%- set js_theme="js/theme.min.js" %}
-  {%- if config.extra.js_switcher_default %}
-    {%- if config.extra.js_switcher_default == "light" %}{% set js_theme="js/theme_light.min.js" %}{% endif %}
-  {%- endif %}
-  <script src="{{ get_url(path=js_theme, trailing_slash=false) | safe }}"{%- if integrity %} integrity="sha384-{{ get_hash(path=js_theme, sha_type=384, base64=true) | safe }}"{%- endif %}></script>
-  {%- endif %}
-
-
-
-{#- Style Sheets #}
-  {%- set stylesheets=config.extra.stylesheets | default(value=[ "style.css" ]) -%}
-  {%- if stylesheets %}{%- for i in stylesheets %}
-  <link rel="stylesheet" href="{{ get_url(path=i, trailing_slash=false, cachebust=true) | safe }}" />
-  {%- endfor %}{%- endif %}
-
-
-
 {#- meta tags #}
   <meta charset="utf-8" />
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
@@ -32,66 +8,13 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="default" />
 
-
-
-{#- Security: CSP, referrer #}
-  {%- if config.extra.security_header_referrer %}
-  <meta name="referrer" content="{{ config.extra.security_header_referrer | safe }}" />
-  {%- endif %}
-  {%- if config.extra.security_header_csp %}
-  <meta http-equiv="Content-Security-Policy" content="{{ config.extra.security_header_csp | safe }}" />
-  {%- endif %}
-
-
-
-{#- Favicons #}
-  {%- if config.extra.favicon_theme_color %}
-  <meta name="theme-color" content="{{ config.extra.favicon_theme_color }}" />
-  {%- endif %}
-
-  {%- if config.extra.favicon_ms_color %}
-  <meta name="msapplication-TileColor" content="{{ config.extra.favicon_ms_color }}" />
-  {%- endif %}
-
-  {%- if config.extra.favicon_mask and config.extra.favicon_mask_color %}
-  <link rel="mask-icon" href="{{ get_url(path=config.extra.favicon_mask, trailing_slash=false) | safe }}" color="{{ config.extra.favicon_mask_color }}" />
-  {%- endif %}
-
-  {%- if config.extra.favicon_svg %}
-  <link rel="icon" type="image/svg+xml" href="{{ get_url(path=config.extra.favicon_svg, trailing_slash=false) | safe }}" />
-  {%- endif %}
-
-  {%- if config.extra.favicon180 %}
-  <link rel="apple-touch-icon" sizes="180x180" href="{{ get_url(path=config.extra.favicon180, trailing_slash=false) | safe }}" />
-  {%- endif %}
-
-  {%- if config.extra.favicon32 %}
-  <link rel="icon" type="image/png" sizes="32x32" href="{{ get_url(path=config.extra.favicon32, trailing_slash=false) | safe }}" />
-  {%- endif %}
-
-  {%- if config.extra.favicon16 %}
-  <link rel="icon" type="image/png" sizes="16x16" href="{{ get_url(path=config.extra.favicon16, trailing_slash=false) | safe }}" />
-  {%- endif %}
-
-
-
-{%- if config.extra.fontawesome %}
-  <link rel="preload" as="style" class="preStyle" href="{{ config.extra.fontawesome | safe }}" crossorigin="anonymous" />
-{%- endif %}
-
-
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="stylesheet" href="{{ get_url(path="/style.css", trailing_slash=false, cachebust=true) | safe }}" />
 
 {#- Rss / Atom Feed #}
   {%- if config.generate_feed %}
   <link rel="alternate" type="{% if config.feed_filename is containing('atom') %}application/atom+xml{% else %}application/rss+xml{% endif %}" title="{{ config.title }} RSS Feed" href="{{ get_url(path=config.feed_filename, trailing_slash=false) | safe }}" />
-  {%- endif %}
-
-
-
-{#- Prerender nav #}
-
-  {%- if config.extra.prerender_nav %}
-  {% for link in config.extra.nav %}
-    <link rel="prerender" href="{{ link.path }}" />
-  {% endfor %}
   {%- endif %}
