--- a/styles/style.css
+++ b/styles/style.css
@@ -23,12 +23,7 @@
     a { @apply url; }
     p { @apply my-4 /* font-serif */; }
     ol { @apply list-decimal list-inside space-y-1 mt-4 mb-4; }
-    ul {
-      @apply list-disc list-inside space-y-1 mt-4 mb-4;
-      > li {
-        /* @apply indent-2; */
-      }
-    }
+    ul { @apply list-disc list-inside space-y-1 mt-4 mb-4; }
     ul ul, ul ol, ol ol, ol ul { @apply ps-4; }
     img {
       /* Add style attribute to images:
@@ -56,34 +51,26 @@
     * { @apply text-lg; }
     a { @apply url; }
     p { @apply my-4 /* font-serif */; }
-    ol { @apply list-decimal space-y-1 mt-4 mb-4 ps-5; }
-    ul { @apply list-disc space-y-1 mt-4 mb-4 ps-5; }
 
+    #experience ~ ul:not(#education ~ ul):not(h4[id^="technologies"] + ul) {
+    @apply list-disc space-y-1 mt-4 mb-4 ps-5;
+    }
     #experience ~ h4[id^="technologies"]:not(#education ~ h4[id^="technologies"]) {
       + ul {
-      @apply flex flex-row list-none space-y-0 gap-4 flex-wrap mt-2 ps-0;
-      > li { @apply border rounded-full py-0 px-4 border-[#73bacd] bg-[#22515e] text-[#73bacd];}
+        @apply flex flex-row list-none space-y-0 gap-4 flex-wrap mt-2 ps-0;
+        > li { @apply border rounded-full py-0 px-4 border-[#73bacd] bg-[#22515e] text-[#73bacd];}
       }
     }
 
     #bachelor-of-computer-science + p {
       @apply text-xl leading-loose;
-    > strong { @apply whitespace-nowrap border rounded-md py-1 px-2 border-[#71add1] bg-[#204961] text-[#71add1]; }
+      > strong { @apply whitespace-nowrap border rounded-md py-1 px-2 border-[#71add1] bg-[#204961] text-[#71add1]; }
     }
     #certificates ~ ul:not(#projects ~ ul) {
-      @apply flex flex-col gap-4 ps-0;
-      > li {
-        @apply list-none text-xl border rounded-xl py-2 px-4 border-[#71add1] bg-[#204961] text-[#71add1];
-      }
+      @apply flex flex-col gap-4 ps-0 mt-4;
     }
-
-    #experience ~ h3:not(#education ~ h3) {
-      /* ~ ul li { */
-      /*     @apply ps-8 -indent-8; */
-      /* } */
-      /* ~ ul li::first-line { */
-          /* @apply indent-0; */
-      /* } */
+    #certificates ~ ul:not(#projects ~ ul) > li {
+      @apply list-none text-xl border rounded-xl py-2 px-4 border-[#71add1] bg-[#204961] text-[#71add1];
     }
   }
 }
